--- a/styles/sections/_product-details.scss
+++ b/styles/sections/_product-details.scss
@@ -312,7 +312,7 @@
       img {
         @include responsive(tablet) {
           width: 100%;
-          height: 100%;
+          height: 200px;
         }
       }
     }
